creusot/tests/should_fail/non_bool_assertion.stderr
error[E0308]: mismatched types
 --> non_bool_assertion.rs:5:21
  |
5 |     proof_assert! { 1 };
  |     ----------------^--
  |     |               |
  |     |               expected `bool`, found associated type
  |     expected `bool` because of return type
  |
  = help: consider constraining the associated type `<i128 as creusot_contracts::View>::ViewTy` to `bool`
  = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
